@@ -27,7 +27,6 @@ BSON_BEGIN_DECLS
 
 
 #define MONGOC_WRITE_CONCERN_W_UNACKNOWLEDGED 0
-#define MONGOC_WRITE_CONCERN_W_ERRORS_IGNORED -1 /* deprecated */
 #define MONGOC_WRITE_CONCERN_W_DEFAULT -2
 #define MONGOC_WRITE_CONCERN_W_MAJORITY -3
 #define MONGOC_WRITE_CONCERN_W_TAG -4
